Node creation factory
Refactor project structure and enhance logging system

Updated CMake configuration to include new C++ modules and reorganized file structure. Modified README for compiler version requirements and upgraded Wisdom library dependency. Expanded logging capabilities in `log.ixx` with template functions, while refactoring the `App` class in `app.ixx` for better output management. Removed `ndi_output.ixx` and `window_output.ixx`, integrating their functionalities elsewhere. Introduced new `common.ixx`, `node.ixx`, and `node_registry.ixx` files to support a new node system, along with the `NDISwapchain` class for managing NDI output.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,18 @@ PRIVATE
   "include/util/log.ixx"
   "include/vortex/app.ixx"
   "include/vortex/swapchain.ixx"
-  "include/vortex/ndi_output.ixx"
+
+  "include/vortex/common.ixx"
+  "include/vortex/node.ixx"
+  "include/vortex/node_registry.ixx"
   
   "include/vortex/platform.ixx"
- "include/vortex/graphics.ixx"   "include/vortex/window_output.ixx")
+  "include/vortex/graphics.ixx"
+
+  "include/vortex/output/ndi_output.ixx"
+  "include/vortex/output/window_output.ixx"
+  
+  )
 set_target_properties(${PROJECT_NAME} PROPERTIES
   CXX_STANDARD 23
   CXX_STANDARD_REQUIRED ON
